--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@
     gap: 2px;
 }
 
-.value{
+.current-value, .expression{
     width: 100%;
-    height: 7em;
+    height: 3em;
     background-color: grey;
+    
 }
 
 button{
