--- a/style.css
+++ b/style.css
@@ -20,9 +20,18 @@
 
 .current-value, .expression{
     width: 100%;
-    height: 3em;
+    height: 3em; 
+}
+
+.current-value{
+    font-weight: bolder;
+    font-size: 1.5rem;
+}
+
+.display{
     background-color: grey;
-    
+    border-radius: 5px;
+    padding: 5px;
 }
 
 button{
@@ -42,3 +51,19 @@ button{
 .wide{
     flex: 2;
 }
+
+.calculator{
+    background-color: black;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.function {
+    background-color: orange;
+    color: black;
+  }
+
+  .operator {
+    background-color: blue;
+    color: white;
+  }
